--- a/index.html
+++ b/index.html
@@ -4,52 +4,35 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
-
     <!-- Css link -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  
-	<!-- Firebase Link -->
-	<script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-
-    <title>Project 1</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Firebase Link -->
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <title>Food Project</title>
   </head>
   <body>
-	
 
 
+   
     
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="http://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	
 
-	<script>
-	// Initialize Firebase
-	var config = {
-    apiKey: "AIzaSyBduDTXB2PTUnzWhxbVATEwjbyLYMjgPf0",
-    authDomain: "cdc-project-1.firebaseapp.com",
-    databaseURL: "https://cdc-project-1.firebaseio.com",
-    projectId: "cdc-project-1",
-    storageBucket: "cdc-project-1.appspot.com",
-    messagingSenderId: "701148576356"
-  };
-  firebase.initializeApp(config);
-	</script>
 
-<script src="assets/javascript/auth.js"></script>
-<script src="assets/javascript/app.js"></script>
+
+
+
+
+
+
   </body>
+    <!-- Jquery Link -->
+    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <!-- Jquery Link -->
+    <script src="assets/javascript/auth.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </html>
