--- a/index.html
+++ b/index.html
@@ -17,22 +17,33 @@
     <title>Food Project</title>
   </head>
   <body>
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/images/pic1.jpg" class"carouselImg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/pic2.jpg" carouselImg alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/pic3.jpg" carouselImg alt="Third slide">
+      </div>
+    </div>
+  </div>
 
 
-   
-    
 
 
 
-
-
-
-
+      <!-- Jquery Link -->
+      <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+      <!-- bootstrap js -->
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+      <!-- local js file Link -->
+      <script src="assets/javascript/auth.js"></script>
+      <script src="assets/javascript/app.js"></script>
 
   </body>
-    <!-- Jquery Link -->
-    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <!-- Jquery Link -->
-    <script src="assets/javascript/auth.js"></script>
-    <script src="assets/javascript/app.js"></script>
+
 </html>
