adding html and search forms

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
   </head>
   <body>
   <div class="carouselWrap">
+        <div class="container-fluid mainSearch">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Enter Ingredients Here" aria-label="" aria-describedby="basic-addon1">
+            <!-- <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+              <span class="caret"></span> -->
+            </button>
+            <div class="input-group-append">
+            <button class="btn btn-dark" type="button">Find Receipes</button>
+            </div>
+          </div>
+        </div>
   <div id="carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -27,7 +38,7 @@
         <img class="d-block w-100" src="assets/images/pic2.jpg" carouselImg alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/pic3.jpg" carouselImg alt="Third slide">
+        <img class="d-block w-100" src="assets/images/pic1.jpg" carouselImg alt="Third slide">
       </div>
     </div>
   </div>
