adding new forms button

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <div class="carouselWrap">
         <div class="container-fluid mainSearch">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Enter Ingredients Here" aria-label="" aria-describedby="basic-addon1">
-            <!-- <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-              <span class="caret"></span> -->
+            <input type="text" class="form-control" id="ingredient1" placeholder="Enter Ingredient">
+            <button type="button" class="btn btn-default dropdown-toggle" id="addMore" data-toggle="dropdown" aria-expanded="false">
+              <span class="caret"></span>
             </button>
             <div class="input-group-append">
-            <button class="btn btn-dark" type="button">Find Receipes</button>
+            <button class="btn btn-dark" id="recipeSearch" type="button">Find Receipes</button>
             </div>
           </div>
         </div>
