--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Firebase Link -->
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <!-- Google API  -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>Food Project</title>
   </head>
   <body>
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+<meta name="google-signin-client_id" content=701148576356-bcgkdmmcuihu4ga7hqjrvj77bd1qku3d.apps.googleusercontent.com">
+
+
+      <!--main carousel-->
   <div class="carouselWrap">
         <div class="container-fluid mainSearch">
           <div class="input-group">
@@ -38,7 +45,13 @@
         <img class="d-block w-100" src="assets/images/pic2.jpg" carouselImg alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/pic1.jpg" carouselImg alt="Third slide">
+        <img class="d-block w-100" src="assets/images/pic3.jpg" carouselImg alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/pic4.jpg" carouselImg alt="Fourth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/pic5.jpg" carouselImg alt="Fifth slide">
       </div>
     </div>
   </div>
