--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <title>Food Project</title>
   </head>
   <body>
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
-<meta name="google-signin-client_id" content=701148576356-bcgkdmmcuihu4ga7hqjrvj77bd1qku3d.apps.googleusercontent.com">
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+<meta name="google-signin-client_id" content="701148576356-bcgkdmmcuihu4ga7hqjrvj77bd1qku3d.apps.googleusercontent.com">
 
 
-      <!--main carousel-->
+      <!-- main carousel -->
   <div class="carouselWrap">
         <div class="container-fluid mainSearch">
           <div class="input-group">
