--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <!-- Google API  -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Food Project</title>
   </head>
   <body>
+    <header>
+      <div class="overlay">
+        <h1>Quick Bytes</h1>
+      </div>
+    </header>
 
       <!-- main carousel -->
   <div class="carouselWrap">
@@ -36,25 +42,29 @@
   <div id="carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/images/pic1.jpg" class"carouselImg" alt="First slide">
+        <img class="d-block w-100 carouselImg" src="assets/images/pic1.jpg"  alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/pic2.jpg" carouselImg alt="Second slide">
+        <img class="d-block w-100 carouselImg" src="assets/images/pic2.jpg"  alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/pic3.jpg" carouselImg alt="Third slide">
+        <img class="d-block w-100 carouselImg" src="assets/images/pic3.jpg"  alt="Third slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/pic4.jpg" carouselImg alt="Fourth slide">
+        <img class="d-block w-100 carouselImg" src="assets/images/pic4.jpg"  alt="Fourth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/pic5.jpg" carouselImg alt="Fifth slide">
+        <img class="d-block w-100 carouselImg" src="assets/images/pic5.jpg"  alt="Fifth slide">
       </div>
     </div>
   </div>
   </div>
 
-
+  <footer class="footer">
+    <div class="container">
+      <span class="text-muted">&#169 Patrick Marrin, Joey Bridges, Corey Richard, Wesley Hanson - 2018</span>
+    </div>
+  </footer>
 
 
 
