changed plus sign in search bar

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="container-fluid mainSearch">
           <div class="input-group">
             <input type="text" class="form-control" id="ingredient1" placeholder="Enter Ingredient">
-            <button type="button" class="btn btn-default dropdown-toggle" id="addMore" data-toggle="dropdown" aria-expanded="false">
-              <span class="caret"></span>
+            <button type="button" class="btn btn-default" id="addMore" data-toggle="dropdown" aria-expanded="false">
+              <span class="plus">&#43;</span>
             </button>
             <div class="input-group-append">
             <button class="btn btn-dark" id="recipeSearch" type="button">Find Receipes</button>
