results html outline

--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,91 @@
 </head>
 
 <body>
+    <div class="container wrapper">
+        <div class="card col-12">
+        <div class="row text-center inner2 ">
+        <div class="card col-12 col-lg-3 card-pad">
+            <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">first</h4>
+                <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+            </div>
+        </div>
+        <div class="card col-12 col-lg-3 card-pad">
+            <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+            <div class="card-body"></div>
+                <h4 class="card-title">second</h4>
+                <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+            </div>
+        </div>
+        <div class="card col-12 col-lg-3 card-pad">
+            <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">last</h4>
+                <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+            </div>
+        </div>
+        </div>
+            <div class="row text-center inner2">
+                <div class="card col-12 col-lg-3 card-pad">
+                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">first</h4>
+                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-lg-3 card-pad">
+                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">second</h4>
+                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-lg-3 card-pad">
+                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">last</h4>
+                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center inner2">
+                <div class="card col-12 col-lg-3 card-pad">
+                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">first</h4>
+                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-lg-3 card-pad">
+                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">second</h4>
+                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-lg-3 card-pad">
+                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">last</h4>
+                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Modal Div -->
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- footer with copyright info -->
