--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-            <div class="card-body"></div>
+            <div class="card-body">
                 <h4 class="card-title">second</h4>
                 <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
             </div>
@@ -97,7 +97,7 @@
             </div>
         </div>
     </div>
-<!-- Modal Div -->
+<!-- Modal -->
 
 
 
