--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     </div>
   </div>
 
-<!-- footer with copyright info -->
+<!-- footer with copyright info
   <footer class="footer">
     <div class="container">
       <span class="text-muted">&#169 Patrick Marrin, Joey Bridges, Corey Richard, Wesley Hanson - 2018</span>
     </div>
-  </footer>
+  </footer> -->
 <!-- Jquery Link -->
       <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <!-- bootstrap js -->
