--- a/index2.html
+++ b/index2.html
@@ -25,98 +25,99 @@
 
 <body>
     <div class="container wrapper">
-        <div class="card col-12">
+        <div class="card col-12 mainCard">
         <div class="row text-center inner2 ">
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
-                <h4 class="card-title">first</h4>
-                <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
-                <h4 class="card-title">second</h4>
-                <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+                <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
-                <h4 class="card-title">last</h4>
-                <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
+
+                <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
             </div>
         </div>
         </div>
-            <div class="row text-center inner2">
-                <div class="card col-12 col-lg-3 card-pad">
-                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">first</h4>
-                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
-                    </div>
-                </div>
-                <div class="card col-12 col-lg-3 card-pad">
-                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">second</h4>
-                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
-                    </div>
-                </div>
-                <div class="card col-12 col-lg-3 card-pad">
-                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">last</h4>
-                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
-                    </div>
+        <div class="row text-center inner2">
+            <div class="card col-12 col-lg-3 card-pad">
+                <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
                 </div>
             </div>
-            <div class="row text-center inner2">
-                <div class="card col-12 col-lg-3 card-pad">
-                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">first</h4>
-                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
-                    </div>
+            <div class="card col-12 col-lg-3 card-pad">
+                <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
                 </div>
-                <div class="card col-12 col-lg-3 card-pad">
-                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">second</h4>
-                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
-                    </div>
+            </div>
+            <div class="card col-12 col-lg-3 card-pad">
+                <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
                 </div>
-                <div class="card col-12 col-lg-3 card-pad">
-                    <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title">last</h4>
-                        <a href="#!" class="btn btn-primary receipe-btn">View Receipe</a>
-                    </div>
+            </div>
+        </div>
+        <div class="row text-center inner2">
+            <div class="card col-12 col-lg-3 card-pad">
+                <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                </div>
+            </div>
+            <div class="card col-12 col-lg-3 card-pad">
+                <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                </div>
+            </div>
+            <div class="card col-12 col-lg-3 card-pad">
+                <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <!--Receipe button to populate modal-->
+    <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal">
+    </a>
+    <!--Modal-->
+    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Receipe</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h3>Modal Body</h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
-<!-- Modal -->
 
 
 
 
 
 
-
-
-
-
-
-
-
-    <!-- footer with copyright info -->
-    <footer class="footer">
-        <div class="container">
-            <span class="text-muted">&#169 Patrick Marrin, Joey Bridges, Corey Richard, Wesley Hanson - 2018</span>
-        </div>
-    </footer>
     <!-- Jquery Link -->
     <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <!-- bootstrap js -->
