--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <span class="plus">&#43;</span>
             </button>
             <div class="input-group-append">
-            <button class="btn btn-dark" id="recipeSearch" type="button">Find Receipes</button>
+            <button class="btn btn-dark" onclick="window.location.href='index2.html'" id="recipeSearch" type="button">Find Receipes</button>
             </div>
           </div>
         </div>
