adding spoonacular ajax call

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
         <h1>Quick Bytes</h1>
       </div>
     </header>
-
-      <!-- main carousel -->
-  <div class="carouselWrap">
         <div class="container-fluid mainSearch">
           <div class="input-group">
             <input type="text" class="form-control" id="ingredient1" placeholder="Enter Ingredient">
@@ -82,6 +79,7 @@
       <!-- local js file Link -->
       <!-- <script src="assets/javascript/auth.js"></script> -->
       <script src="assets/javascript/app.js"></script>
+      <script src="assets/javascript/spoonApi.js"></script>
 
   </body>
 
