--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <span class="plus">&#43;</span>
             </button>
             <div class="input-group-append">
+                <!-- onclick="window.location.href='index2.html'" -->
             <button class="btn btn-dark" id="recipeSearch" type="button">Find Receipes</button>
             </div>
           </div>
