final responsive change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </button>
     </div>
     <div class="overlay animated lightSpeedIn">
-      <h1 class="">Quick Bytes</h1>
+      <h1 class="pageTitle">Quick Bytes</h1>
     </div>
 
   </header>
